# MUIOGO

./: .gitignore  README.md  pyproject.toml  requirements.txt
API/Classes/Base/: Config.py
API/Classes/Case/: DataFileClass.py  HelpersClass.py  ImportTemplate.py  OsemosysClass.py
API/Routes/Case/: CaseRoute.py
API/Routes/Upload/: UploadRoute.py
WebAPP/: index.html
WebAPP/App/Controller/: AddCase.js  Config.js  Navbar.js  RESViewer.js  RESViewerMermaid.js  Settings.js
WebAPP/App/Model/: AddCase.Model.js  Config.Model.js  RESViewer.Model.js  RESViewerMermaid.Model.js  RYCTs.Model.js  RYT.Model.js  RYTCM.Model.js  RYTCn.Model.js  RYTTs.Model.js
WebAPP/App/View/: AddCase.html  Config.html  DataFile.html  Navbar.html  RESViewer.html  RESViewerMermaid.html  RTSM.html  RYC.html  RYCTs.html  RYCn.html  RYDtb.html  RYE.html  RYS.html  RYSeDt.html  RYT.html  RYTC.html  RYTCM.html  RYTCn.html  RYTEM.html  RYTM.html  RYTSM.html  RYTTs.html  RYTs.html  Settings.html  Versions.html
WebAPP/AppResults/Controller/: Pivot.js
WebAPP/AppResults/Model/: Pivot.Model.js
WebAPP/AppResults/View/: Pivot.html
WebAPP/Classes/: Const.Class.js  DataModel.Class.js  DataModelResult.Class.js  DefaultObj.Class.js  Grid.Class.js  Html.Class.js  JqxSources.Class.js  Osemosys.Class.js  SectorColors.Class.js
WebAPP/Config/: sector_rules.json
WebAPP/DataStorage/: Duals.json  Parameters.json
WebAPP/References/smartadmin/css/: demo.css  osy.css
WebAPP/Routes/: Routes.Class.js
WebAPP/SOLVERs/: model.v.5.4.txt
docs/: ARCHITECTURE.md
docs/source/: conf.py
docs/source/examples/: others.rst
docs/source/getting-started/: quick-start.rst
docs/source/user-guide/: creating.rst
scripts/: QUICK_INSTALL.md  install.ps1  install.sh  setup_dev.py
